--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,18 @@
 {
   "extends": "babel",
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
+    "arrow-parens": "off",
     "comma-dangle": ["error", "always-multiline"],
     "curly": ["error", "multi-line"],
     "func-call-spacing": "error",
+    "indent": "off",
     "key-spacing": "error",
-    "no-multi-spaces": "error"
+    "no-multi-spaces": "error",
+    "quotes": "off",
+    "prettier/prettier": ["error", { "trailingComma": "all" }]
   },
   "env": {
     "node": true,
